Don't rely on transparent decompression in list_aur
The current AUR package list code relies on the reqwest client library
to transparently decompress the packages.gz file. This only works if
the server provides the 'Content-Encoding: gzip" HTTP header, which
appears to have changed recently.

This patch explicitly decompresses the package list if no encoding
information is provided by the server.

Fixes: https://github.com/Morganamilo/paru/issues/1447

v2: blindly decompress with fall back on error, since reqwest strips
the content encoding header when it transparently decompresses.

v3: also fix same issue in completion.rs and search.rs

Signed-off-by: Edwin Peer <espeer@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,6 +57,7 @@ regex = "1.11.1"
 signal-hook = "0.3.18"
 bitflags = "2.9.1"
 toml = { version = "0.8.23", features = ["preserve_order"] }
+flate2 = "1.1"
 
 [profile.release]
 codegen-units = 1
