--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "paru"
 version = "2.1.0"
 authors = ["morganamilo <morganamilo@archlinux.org>"]
-edition = "2021"
+edition = "2024"
 
 description = "Feature packed AUR helper"
 homepage = "https://github.com/Morganamilo/paru"
@@ -11,18 +11,18 @@ documentation = "https://docs.rs/paru"
 license = "GPL-3.0"
 keywords = ["archlinux", "arch", "alpm", "pacman", "aur"]
 include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md", "help"]
-rust-version = "1.80"
+rust-version = "1.85"
 
 
 [dependencies]
-alpm = "4.0.3"
-alpm-utils = "4.0.1"
+alpm = "5.0.0"
+alpm-utils = "5.0.0"
 aur-depends = "4.0.5"
 aur-fetch = "0.11.3"
 cini = "1.0.0"
 pacmanconf = "3.0.0"
 raur = "7.0.0"
-srcinfo = "1.3.1"
+srcinfo = "2.0.0"
 
 
 ansiterm = "0.12.2"
@@ -33,9 +33,9 @@ futures = "0.3.31"
 globset = "0.4.16"
 htmlescape = "0.3.1"
 indicatif = "0.18.0"
-scraper = "0.23.1"
+scraper = "0.25.0"
 nix = { version = "0.30.1", features = ["fs", "user"] }
-reqwest = { version = "0.11.0", features = ["gzip", "socks"] }
+reqwest = { version = "0.12.25", features = ["gzip", "socks"] }
 rss = { version = "2.0.12", default-features = false }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
@@ -55,8 +55,8 @@ tr = "0.1.10"
 unicode-width = "0.2.1"
 regex = "1.11.1"
 signal-hook = "0.3.18"
-bitflags = "2.9.1"
-toml = { version = "0.8.23", features = ["preserve_order"] }
+bitflags = "2.10.0"
+toml = { version = "0.9.8", features = ["preserve_order"] }
 
 [profile.release]
 codegen-units = 1
@@ -75,4 +75,5 @@ mock_chroot = ["mock"]
 #alpm = { path = "../alpm.rs/alpm" }
 #alpm-utils = { path = "../alpm.rs/alpm-utils" }
 #aur-depends = { path = "../aur-depends" }
+#raur = { path = "../raur" }
 #aur-fetch = { path = "../aur-fetch" }
