--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ ansiterm = "0.12.2"
 anyhow = { version = "1.0.98", features = ["backtrace"] }
 chrono = { version = "0.4.41", default-features = false, features = ["clock"] }
 dirs = "6.0.0"
+flate2 = "1.0"
 futures = "0.3.31"
 globset = "0.4.16"
 htmlescape = "0.3.1"
