--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,48 +15,48 @@ rust-version = "1.80"
 
 
 [dependencies]
-alpm = "4.0.3"
-alpm-utils = "4.0.1"
-aur-depends = "4.0.5"
+alpm = "5.0.0"
+alpm-utils = "5.0.0"
+aur-depends = "5.0.0"
 aur-fetch = "0.11.3"
 cini = "1.0.0"
-pacmanconf = "3.0.0"
+pacmanconf = "3.1.0"
 raur = "7.0.0"
-srcinfo = "1.3.1"
+srcinfo = "2.1.0"
 
 
 ansiterm = "0.12.2"
-anyhow = { version = "1.0.98", features = ["backtrace"] }
-chrono = { version = "0.4.41", default-features = false, features = ["clock"] }
+anyhow = { version = "1.0.100", features = ["backtrace"] }
+chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
 dirs = "6.0.0"
 futures = "0.3.31"
-globset = "0.4.16"
+globset = "0.4.18"
 htmlescape = "0.3.1"
-indicatif = "0.18.0"
-scraper = "0.23.1"
+indicatif = "0.18.3"
+scraper = "0.25.0"
 nix = { version = "0.30.1", features = ["fs", "user"] }
 reqwest = { version = "0.11.0", features = ["gzip", "socks"] }
 rss = { version = "2.0.12", default-features = false }
-serde = { version = "1.0.219", features = ["derive"] }
-serde_json = "1.0.140"
+serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.148"
 smart-default = "0.7.1"
-tempfile = "3.20.0"
-terminal_size = "0.4.2"
-tokio = { version = "1.46.1", features = [
+tempfile = "3.24.0"
+terminal_size = "0.4.3"
+tokio = { version = "1.48.0", features = [
     "process",
     "macros",
     "rt-multi-thread",
 ] }
-url = "2.5.4"
+url = "2.5.7"
 env_logger = "0.11.8"
-log = "0.4.27"
-async-trait = { version = "0.1.88", optional = true }
+log = "0.4.29"
+async-trait = { version = "0.1.89", optional = true }
 tr = "0.1.10"
-unicode-width = "0.2.1"
-regex = "1.11.1"
-signal-hook = "0.3.18"
-bitflags = "2.9.1"
-toml = { version = "0.8.23", features = ["preserve_order"] }
+unicode-width = "0.2.2"
+regex = "1.12.2"
+signal-hook = "0.4.1"
+bitflags = "2.10.0"
+toml = { version = "0.9.10", features = ["preserve_order"] }
 
 [profile.release]
 codegen-units = 1
@@ -75,4 +75,5 @@ mock_chroot = ["mock"]
 #alpm = { path = "../alpm.rs/alpm" }
 #alpm-utils = { path = "../alpm.rs/alpm-utils" }
 #aur-depends = { path = "../aur-depends" }
+#srcinfo = { path = "../srcinfo.rs" }
 #aur-fetch = { path = "../aur-fetch" }
